--- a/adk/VoiceLedKit/res/values/strings.xml
+++ b/adk/VoiceLedKit/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 	<string name="app_name">VoiceLedKit</string>
-	<string name="no_device">Please connect a DemoKit board.</string>	
+	<string name="demokit">Voice Demo</string>
 </resources>
