--- a/adk/ScrollMaps/res/values/strings.xml
+++ b/adk/ScrollMaps/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, SampleMapsActivity!</string>
     <string name="app_name">SampleMaps</string>
+    <string name="demokit">Scroll Maps</string>
 
 </resources>
