--- a/adk/WebCommand/res/values/strings.xml
+++ b/adk/WebCommand/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">WebSocket Sample</string>
+    <string name="app_name">WebCommad</string>
     <string name="demokit">WebCommand</string>
     
 </resources>
